grammer.txt
Grammer

expr			-> term ;
term			-> factor ( ( "+" | "-" ) factor )* ;
factor			-> unary ( ( "/" | "*" | "#" | "^" ) unary )* ;
unary			-> ( ( "-" | "~" | "!" "|" ) unary ) | primary ;
primary			-> NUMBER | "(" expr ")" ;
